--- a/easy_invoice_cash/i18n/es_AR.po
+++ b/easy_invoice_cash/i18n/es_AR.po
@@ -6,8 +6,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Odoo Server 11.0\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2022-05-31 16:35+0000\n"
-"PO-Revision-Date: 2022-05-31 16:35+0000\n"
+"POT-Creation-Date: 2022-06-02 17:28+0000\n"
+"PO-Revision-Date: 2022-06-02 17:28+0000\n"
 "Last-Translator: <>\n"
 "Language-Team: \n"
 "MIME-Version: 1.0\n"
@@ -16,9 +16,27 @@ msgstr ""
 "Plural-Forms: \n"
 
 #. module: easy_invoice_cash
+#: code:addons/easy_invoice_cash/models/easy_recaudation_xlsx.py:16
+#, python-format
+msgid "Account"
+msgstr "Contabilidad"
+
+#. module: easy_invoice_cash
+#: code:addons/easy_invoice_cash/models/easy_recaudation_xlsx.py:12
+#, python-format
+msgid "Account Move"
+msgstr "Asiento Contable"
+
+#. module: easy_invoice_cash
 #: model:ir.model.fields,field_description:easy_invoice_cash.field_easy_recaudation_total_amount
 msgid "Amount Box"
 msgstr "Monto en Caja"
+
+#. module: easy_invoice_cash
+#: code:addons/easy_invoice_cash/models/easy_recaudation_xlsx.py:19
+#, python-format
+msgid "Balance"
+msgstr "Balance"
 
 #. module: easy_invoice_cash
 #: model:ir.ui.view,arch_db:easy_invoice_cash.view_easy_recaudation_form_cashbox
@@ -26,15 +44,38 @@ msgid "Cash Journal"
 msgstr "Movimiento Diarios Efectivo"
 
 #. module: easy_invoice_cash
-#: model:ir.ui.view,arch_db:easy_invoice_cash.view_easy_recaudation_form_cashbox
-msgid "Total Amount Easy"
-msgstr "Monto en Caja Easy"
+#: code:addons/easy_invoice_cash/models/easy_recaudation_xlsx.py:9
+#, python-format
+msgid "Cashbox Report"
+msgstr "Reporte de Caja"
 
 #. module: easy_invoice_cash
-#: model:ir.model.fields,field_description:easy_invoice_cash.field_easy_recaudation_journal_ids
-#: model:ir.ui.view,arch_db:easy_invoice_cash.view_easy_recaudation_form_cashbox
-msgid "Journals"
-msgstr "Diarios"
+#: code:addons/easy_invoice_cash/models/easy_recaudation_xlsx.py:15
+#, python-format
+msgid "Company"
+msgstr "Empresa"
+
+#. module: easy_invoice_cash
+#: code:addons/easy_invoice_cash/models/easy_recaudation_xlsx.py:11
+#, python-format
+msgid "Date"
+msgstr "Fecha"
+
+#. module: easy_invoice_cash
+#: code:addons/easy_invoice_cash/models/easy_recaudation_xlsx.py:14
+#, python-format
+msgid "Description"
+msgstr "Descripción"
+
+#. module: easy_invoice_cash
+#: model:ir.model.fields,field_description:easy_invoice_cash.field_report_easy_invoice_cash_report_easy_cashbox_xlsx_display_name
+msgid "Display Name"
+msgstr "Mostrar Nombre"
+
+#. module: easy_invoice_cash
+#: model:ir.actions.report,name:easy_invoice_cash.report_easy_cashbox_xlsx
+msgid "Easy Cashbox"
+msgstr "Easy Caja"
 
 #. module: easy_invoice_cash
 #: model:ir.model,name:easy_invoice_cash.model_easy_recaudation
@@ -47,11 +88,60 @@ msgid "Effective Journal Amount"
 msgstr "Montos Diarios Efectivo"
 
 #. module: easy_invoice_cash
+#: model:ir.model.fields,field_description:easy_invoice_cash.field_report_easy_invoice_cash_report_easy_cashbox_xlsx_id
+msgid "ID"
+msgstr "ID"
+
+#. module: easy_invoice_cash
+#: code:addons/easy_invoice_cash/models/easy_recaudation_xlsx.py:13
+#, python-format
+msgid "Journal"
+msgstr "Diario"
+
+#. module: easy_invoice_cash
 #: model:ir.model.fields,field_description:easy_invoice_cash.field_easy_recaudation_journal_ids
+#: model:ir.ui.view,arch_db:easy_invoice_cash.view_easy_recaudation_form_cashbox
 msgid "Journals"
 msgstr "Diarios"
+
+#. module: easy_invoice_cash
+#: model:ir.model.fields,field_description:easy_invoice_cash.field_report_easy_invoice_cash_report_easy_cashbox_xlsx___last_update
+msgid "Last Modified on"
+msgstr "Última modificación en"
 
 #. module: easy_invoice_cash
 #: model:ir.model.fields,field_description:easy_invoice_cash.field_easy_recaudation_move_ids
 msgid "Moves"
 msgstr "Movimientos"
+
+#. module: easy_invoice_cash
+#: code:addons/easy_invoice_cash/models/easy_recaudation_xlsx.py:17
+#, python-format
+msgid "Sequence"
+msgstr "Secuencia"
+
+#. module: easy_invoice_cash
+#: code:addons/easy_invoice_cash/models/easy_recaudation_xlsx.py:18
+#, python-format
+msgid "State"
+msgstr "Estado"
+
+#. module: easy_invoice_cash
+#: model:ir.ui.view,arch_db:easy_invoice_cash.view_easy_recaudation_form_cashbox
+msgid "Total Amount Easy"
+msgstr "Monto en Caja Easy"
+
+#. module: easy_invoice_cash
+#: model:ir.ui.view,arch_db:easy_invoice_cash.view_easy_recaudation_form_cashbox
+msgid "Date Report"
+msgstr "Fecha Reporte"
+
+#. module: easy_invoice_cash
+#: model:ir.model,name:easy_invoice_cash.model_report_easy_recaudation_report_easy_cashbox_xlsx
+msgid "report.easy.recaudation.report_easy_cashbox_xlsx"
+msgstr "report.easy.recaudation.report_easy_cashbox_xlsx"
+
+#. module: easy_invoice_cash
+#: model:ir.model,name:easy_invoice_cash.model_report_easy_invoice_cash_report_easy_cashbox_xlsx
+msgid "report.easy_invoice_cash.report_easy_cashbox_xlsx"
+msgstr "report.easy_invoice_cash.report_easy_cashbox_xlsx"
